Fix alignment of navbar button.
Remove the left margin to get the button line up nicely with the left
edge of the logo image, and the left edge of the main body content.

--- a/DDDEastAnglia/Content/Site.css
+++ b/DDDEastAnglia/Content/Site.css
@@ -13,7 +13,10 @@
 .masthead img { margin-right: 10px; }
 
 .navbar { margin-bottom: 10px; }
-.btn.btn-navbar { float: left; }
+.btn.btn-navbar {
+    float: left;
+    margin-left: 0;
+}
 
 .dddea {
     font-weight: bold;
